fixed contact number in form section was overlaping over doing some changes

--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -76,4 +76,5 @@
     display: flex;
     justify-content: center;
     margin-top: 10px;
+    margin-bottom: 28px;
 }
